--- a/commerce/commerce/auctions/templates/auctions/category.html
+++ b/commerce/commerce/auctions/templates/auctions/category.html
@@ -2,6 +2,8 @@
 
 {% block body %}
     <h2>Category</h2>
-    
+    {% for option in options %}
+        {{ option }}
+    {% endfor %}
 
 {% endblock %}
