--- a/commerce/commerce/auctions/templates/auctions/add.html
+++ b/commerce/commerce/auctions/templates/auctions/add.html
@@ -9,8 +9,9 @@
     <form action="{% url 'add' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
-        <input type="submit">
+        <input type="submit" value="Submit">
     </form>
+
     {% comment %} <form action="{% url 'add' %}" method = "post">
         {% csrf_token %}
         {{ form }}
